--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Malla Curricular Veterinaria (UBA)</title>
   <style>
     body {
-      font-family: 'Segoe UI', Roboto, sans-serif;
+      font-family: Georgia, "Times New Roman", serif;
       background-color: #f8f6fb;
       margin: 0;
       padding: 2rem;
