--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: Georgia, "Times New Roman", serif;
-      background-color: #f8f6fb;
+      background-color: #c0a4c9;
       margin: 0;
       padding: 2rem;
       color: #333;
@@ -23,7 +23,7 @@
       justify-content: center;
     }
     .column {
-      background-color: #fff;
+      background-color: #E6E6FA;
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(90, 62, 146, 0.1);
       padding: 1rem;
