--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
     .column {
       background-color: #fff;
-      border-radius: 8px;
+      border-radius: 1px;
       box-shadow: 0 2px 6px rgba(90, 62, 146, 0.1);
       padding: 1rem;
       width: 250px;
@@ -117,7 +117,8 @@
         </select>
       </div>
     </div>
-
+</body>
+  
     <div class="column" id="year1">
       <h2>Primer Año</h2>
       <div class="subject" data-id="201" data-reqs="05,08,24,40,51,53">
@@ -176,9 +177,8 @@
       </div>
     </div>
   </div>
+</body>
 
-
-  
   <div class="column" id="year2">
     <h2>Segundo Año</h2>
   <div class="subject" data-id="205" data-reqs="201:regular,202:regular,203:regular">
@@ -228,6 +228,7 @@
 </div>
     </div>
   </div>
+</body>
   
   <div class="column" id="approvebeforeyear3">
   <h2>Aprobar antes de Tercer Año</h2>
@@ -257,7 +258,8 @@
 </div>
     </div>
   </div>
-
+</body>
+  
      <div class="column" id="year3">
       <h2>Tercer Año</h2>
   <div class="subject" data-id="301" data-reqs="204:regular,205:regular">
@@ -325,7 +327,8 @@
 </div>
     </div>
   </div>
-    
+</body>
+  
 <div class="column" id="year4">
   <h2>Cuarto Año</h2>
   <div class="subject" data-id="304" data-reqs="301:regular,303:regular,602:regular,207:approved">
@@ -370,6 +373,7 @@
 </div>
     </div>
   </div>
+</body>
   
 <div class="column" id="year5">
   <h2>Quinto Año</h2>
@@ -445,7 +449,8 @@
 </div>
     </div>
   </div>
-
+</body>
+  
   <div class="column" id="approvebeforeyear6-compulsoryhighercycle">
   <h2>Aprobar antes de Sexto Año - Ciclo Superior Obligatorio</h2>
   <div class="subject" data-id="209" data-reqs="814:regular">
@@ -458,6 +463,7 @@
 </div>
     </div>
   </div>
+</body>
   
     <div class="column" id="year6-compulsoryhighercycle">
   <h2> Sexto Año - Ciclo Superior Obligatorio</h2>
@@ -498,6 +504,7 @@
 </div>
     </div>
   </div>
+</body>
   
     <div class="column" id="supervisedprofessionalpractices">
   <h2> Prácticas Profesionales Supervisadas </h2>
@@ -521,3 +528,4 @@
     <select><option value="none">No cursada</option><option value="regular">Regular</option><option value="approved">Aprobada</option></select>
     <div class="tooltip">Requiere asignaturas del CBC y los Ejes 3 4 aprobados y regulares las de Primer Año, Segundo Año, Tercer Año, Cuarto Año y Quinto Año</div>
   </div>
+</body>
